--- a/exercicio.html
+++ b/exercicio.html
@@ -21,7 +21,7 @@
       <input id="email" type="email" /><br />
       <label for="number">Senha</label>
       <input id="password" type="password" /><br />
-      <button type="submit">Cadastra</button>
+      <button type="submit">Cadastrar</button>
     </form>
   </body>
 </html>
