--- a/exercicio.html
+++ b/exercicio.html
@@ -15,12 +15,12 @@
   <body>
     <h1>Formulário de cadastro</h1>
     <form action="">
-      <label for="text">Nome</label>
-      <input id="text" type="text" /><br />
+      <label for="nome">Nome</label>
+      <input id="nome" type="text" /><br />
       <label for="email">E-mail</label>
       <input id="email" type="email" /><br />
-      <label for="number">Senha</label>
-      <input id="password" type="password" /><br />
+      <label for="senha">Senha</label>
+      <input id="senha" type="password" /><br />
       <button type="submit">Cadastrar</button>
     </form>
   </body>
